Addnewapis (#3)
* added roll api to simulate dice rolls

* changed roll api

* api for getting emacs config install script

* moved resume.json into assets folder

* emacs api now serves public and private script options

* update postman collection with new apis

* update swagger.json with new apis

* update swagger.json again
